# Codim-IPC

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.py  build_Mac.py  make.py
CMake/: mkl-2020.4.cmake  mkl-2021.3.0.cmake  mkl.cmake  onetbb.cmake  suitesparse.cmake  tbb.cmake
Documents/: Storage.md
Projects/FEM/input/: Armadillo13K.vtk  Armadillo2.5K.vtk  Armadillo28K.vtk  bottle.vtk  butter.vtk  butterPlate.vtk  cube.vtk  cylinder4K.vtk  disjoint_gen.py  fork.vtk  glass.vtk  knife.vtk  mat100x100.vtk  mat20x20.vtk  mat_gen.py  meat.vtk  meatPlate.vtk  sphere12K.vtk  sphere19K.vtk  sphere1K.vtk  sphere5K.vtk  table.vtk  tet.vtk  torus4K.vtk
Projects/FEMShell/: 10_noodles.py  11_membrane_locking.py  12a_extreme_strain_limit.py  12b_extreme_strain_limit.py  13_anisotropic_strain_limiting.py  18_sphere_on_cloth_stack.py  1_table_cloth_pull.py  21_sprinkles.py  22_granules_on_cloth.py  23_all-in.py  2_twisted_cylinder.py  3a_braids.py  3b_hairs.py  4_reef_knot.py  5_garments.py  6_cloth_on_rotating_sphere.py  7_funnel.py  8_precision_card_shuffle.py  9_cloth_over_codimensional_needles.py  ObjFile.py  animate.py  batch.py  combinefile.py  combinefileall.py  obj2png.py  sphere_crushing.py  sphere_set_up.py
Projects/FEMShell/input/: needleBed10x10.seg  needleBed20x20.seg  needleBedGen.txt  plate113_1e-3.vtk  plate41_0.01.vtk  plate41_0.1.vtk  plate41_1.vtk  plate41_1e-3.vtk  plate57_1e-3.vtk  plate81_1e-3.vtk  skirt0.005mm.vtk  skirt0.05mm.vtk  skirt0.5mm.vtk  skirt5mm.vtk  string10.seg
Python/: __init__.py
Python/Drivers/: FEMDiscreteShellBase.py  FEMSimulationBase.py  SimulationBase.py  __init__.py
